# itu-auction

./: .gitignore  IPFP.ipynb  ITU_estimation copy.ipynb  ITU_estimation.ipynb  ITU_estimation_new.ipynb  OT_auction.ipynb  README.md  convex_taxes_AUC.ipynb  coop_ITU_fixed.ipynb  cooperative_auction_ITU.ipynb  for_rev_scaling_ALGs.ipynb  forward_reverse_scaling copy.ipynb  forward_reverse_scaling.ipynb  old_auction.py  one_to_one_ITU_algorithm.ipynb  package_things.txt  parallel_auction_ITU.ipynb  pyproject.toml  requirements.txt  reverse.py  setup.py  test.py  to-do.txt
batched_itu_auction/: __init__.py  core.py
batched_itu_auction/templates/: LU.py  convex_tax.py
experiments/: TU_example.py  convex_tax_example.py  demo_LU.py  demo_TU.py  demo_batched.py  demo_convex-tax.py  demo_custom.py  demo_multimarket.py
experiments/research_log_eps/: exp1_output.txt  exp1_scaling_baseline.py  exp2_adversarial.py  exp2_output.txt  exp3_output.txt  exp3_price_stability.py  final_chapter_experiments.py  instrumented.py  research_notes.md
itu_auction/: __init__.py  core.py
itu_auction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
itu_auction/templates/: LU.py  TU.py  __init__.py  _registry.py  convex_tax.py
old_notebooks/: OT_auction.ipynb  convex_taxes_AUC.ipynb  cooperative_auction_ITU copy.ipynb  forward_reverse_scaling.ipynb  parallel_auction_ITU copy.ipynb
old_stuff/old_notebooks/: serial_auctioon.ipynb
old_stuff/very_old_notebooks/: coop_ITU_fixed copy.ipynb  (+2 more)
tests/: test_terminal_certificate.py
very_old_notebooks/: dijkstra_attempt.ipynb
(+14 files in other folders)
